# ASTral

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.agents/roles/: 00-company-coordinator.md  01-product-lead.md  02-tech-lead.md  03-implementer.md  04-qa-agent.md  05-reviewer.md  06-release-manager.md
.agents/skills/code-review/: SKILL.md
.agents/skills/grill-me/: SKILL.md
.agents/skills/issue-gate-0/: SKILL.md
.agents/skills/prompt-injection-guard/: SKILL.md
.agents/skills/stuck-advisor/: SKILL.md
.agents/skills/tdd-implement/: SKILL.md
.agents/skills/verify-pre-push/: SKILL.md
.agents/skills/virtual-company/: SKILL.md
.codex/agents/: code-explorer.toml  implementer.toml
.github/workflows/: ci.yml
docs/: architecture.md  development.md  indexing.md  mcp.md  roadmap.md  storage.md
docs/adr/: 0001-use-oxc-for-javascript-typescript.md  0002-phase1-sqlite-index.md  0003-phase2-incremental-indexing.md  0004-phase3-code-relationships.md  0005-phase4-mcp-stdio.md  0006-phase5-git-snapshot-overlay.md  0007-phase6-search-quality.md  0008-phase7-semantic-search.md  0009-phase8-typescript-precision-sidecar.md  0010-phase9-remote-team-mode.md  0011-cli-operation-logging-and-rotation.md
evaluation/: precision_sidecar.json  search_quality.json  semantic_search_baseline.json
evaluation/fixtures/: git.ts  incremental.ts  mcp.ts  relationship-edges.ts
src/: analyzer.rs  config.rs  error.rs  evaluation.rs  git.rs  incremental.rs  index.rs  lib.rs  logging.rs  main.rs  mcp.rs  oxc_analyzer.rs  ranking.rs  repository.rs  scanner.rs  web.rs
tests/: cli.rs  evaluation.rs  git.rs  incremental.rs  index.rs  oxc_analyzer.rs  relationships.rs  scanner.rs  web.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.vue  api.js  style.css
web/src/components/: CodePreview.vue  ResultList.vue  SearchPanel.vue  StatusBar.vue  SymbolGraph.vue
