[package]
name = "astral"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "AST-aware repository context engine for AI coding agents"
license = "MIT"

[workspace]
members = ["."]
resolver = "2"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.10"
