[package]
name = "astral"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "AST-aware repository context engine for AI coding agents"
license = "MIT"

[workspace]
members = ["."]
resolver = "2"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
ignore = "0.4"
notify = "7.0.0"
oxc_allocator = "0.140.0"
oxc_ast = "0.140.0"
oxc_ast_visit = "0.140.0"
oxc_parser = "0.140.0"
oxc_semantic = "0.140.0"
oxc_span = "0.140.0"
oxc_resolver = "11.24.2"
rusqlite = { version = "0.40.1", features = ["bundled-full"] }
rmcp = { version = "2.2.0", default-features = false, features = ["macros", "server", "transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.10"
